2008-07-30  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add GObject.ref_count binding, fixes bug 532584

2008-07-23  Jared Moore  <jaredm@svn.gnome.org>

	* vala/valainterfacewriter.vala:
	* vala/valaclass.vala:
	* gobject/valaccodeinterfacebinding.vala:
	* gobject/valaccodeclassbinding.vala:
	* gobject/valaccodegenerator.vala: 

	Add [CCode (type_check_function = "BLAH_IS_FOO")] for classes.

	* vapigen/valagidlparser.vala:

	Add type_check_function metadata.

	* vapi/packages/gnome-vfs-2.0/gnome-vfs-2.0.metadata:

	Set type_check_function for GnomeVFSDrive, GnomeVFSVolume,
	GnomeVFSVolumeMonitor, fixes bug 543693.

	* vapi/gnome-vfs-2.0.vapi: regenerated

2008-07-22  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add binding for g_object_set_property

	* vapi/packages/gdk-2.0/:
	* vapi/packages/gtk+-2.0/:

	Various out and nullable fixes, patch by Frederik, fixes bug 544189

	* vapi/gdk-2.0.vapi:
	* vapi/gtk+-2.0.vapi:

	Regenerated

2008-07-22  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_bus_set_sync_handler binding, fixes bug 542388

	* vapi/gstreamer-0.10.vapi: regenerated

2008-07-22  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Add GST_DEBUG_BIN_TO_DOT_FILE binding,
	patch by Thijs Vermeir, fixes bug 543759

	* vapi/gstreamer-0.10.vapi: regenerated

2008-07-22  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_ghost_pad_set_target binding,
	patch by Thijs Vermeir, fixes bug 544060

	* vapi/gstreamer-0.10.vapi: regenerated

2008-07-22  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodearraycreationexpressionbinding.vala:

	Fix crash when using multi-dimensional arrays,
	patch by Amos Brocco, fixes bug 544145

2008-07-22  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:

	Fix regression introduced by last commit

2008-07-22  Jared Moore  <jaredm@svn.gnome.org>

	* vala/valaparser.vala:

	Support "global::" for object creation expressions.
