@@ -1,5 +1,12 @@
 2008-07-30  Jürg Billeter  <j@bitron.ch>
 
+	* gobject/valaccodecompiler.vala:
+
+	Fix linking with --as-needed and on Windows,
+	patch by Yaakov Selkowitz, fixes bug 545427
+
+2008-07-30  Jürg Billeter  <j@bitron.ch>
+
 	* vapi/glib-2.0.vapi:
 
 	Add GObject.ref_count binding, fixes bug 532584
